--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>BAP</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>BAP</h1>
-
-    <div class="selection hide"> 
-        <input class='searchBar' type="text">
-        <button class="SC">Ok</button>
-    </div>
+    
 </body>
 </html>
