css files organisation

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -9,12 +9,12 @@
     <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
     <header>
-        <img src="img/logo-blanc.png" alt="logo-carbon" class="logo-carbon">
+        <img src="img/homepage/logo-blanc.png" alt="logo-carbon" class="logo-carbon">
         <a href="#" class="btn-articles">ARTICLES</a>
     </header>
 
@@ -30,11 +30,11 @@
             <h2 class="h2">A toi de jouer !</h2>
             <div class="begin">
                 <div class="logo">
-                    <img src="img/logo-cartes.png" alt="logo-cartes">
+                    <img src="img/homepage/logo-cartes.png" alt="logo-cartes">
                     <h3>Cartes</h3>
                 </div>
                 <div class="logo">
-                        <img src="img/logo-commencer.png" alt="logo-commencer">
+                        <img src="img/homepage/logo-commencer.png" alt="logo-commencer">
                     <h3>Commencer</h3>
                 </div>
             </div>
