--- a/public/classement.html
+++ b/public/classement.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classement de fin de partie --- CARBON</title>
 
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <header>
-        <img src="img/logo-blanc.png" alt="logo-carbon">
+        <img src="img/homepage/logo-blanc.png" alt="logo-carbon">
         <a href="#" class="btn-articles">ARTICLES</a>
     </header>
 
