:liptick: begin UI update for select-cards page

--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -7,13 +7,31 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripts/select-cards.js" defer></script>
     <title>BAP</title>
+
+    <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>BAP</h1>
 
-    <div class="selection hide"> 
-        <input class='searchBar' type="text">
-        <button class="SC">Ok</button>
-    </div>
+    <header>
+        <a href="../public/homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
+        <div style="display: flex; align-items: center;">
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="btn-articles">ARTICLES</a>
+        </div>
+    </header>
+
+    <section class="sc-section">
+        <h1 class="sc-h1">Veuillez selectionner les cartes restantes dans votre deck</h1>
+
+        <div class="selection hide"> 
+            <input class='searchBar' type="text">
+            <button class="SC">Ok</button>
+        </div>
+
+        <a href="../public/classement.html" class="bouton-retour">Voir les résultats</a>
+
+    </section>
+
 </body>
 </html>
