:art: fix select-cards page

--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -29,6 +29,10 @@
             <button class="SC">Ok</button>
         </div>
 
+        <div id="cards">
+            
+        </div>
+
         <a href="../public/classement.html" class="bouton-retour">Voir les résultats</a>
 
     </section>
