--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -24,9 +24,12 @@
     <section class="sc-section">
         <h1 class="sc-h1">Veuillez selectionner les cartes restantes dans votre deck</h1>
 
-        <div class="selection hide"> 
-            <input class='searchBar' type="text">
-            <button class="SC">Ok</button>
+        <div class="selection hide">
+            <div class="select-zone">
+                <p>Veuillez selectionner votre carte avec son chiffre</p>
+                <input class='searchBar' type="text">
+                <button class="SC">Ok</button>
+            </div>
         </div>
 
         <div id="cards">
