--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -36,7 +36,7 @@
             
         </div>
 
-        <a href="../public/classement.html" class="bouton-retour">Voir les résultats</a>
+        <a href="./classement.html" class="bouton-retour">Voir les résultats</a>
 
     </section>
 
