--- a/public/classement.html
+++ b/public/classement.html
@@ -7,12 +7,17 @@
     <title>Classement de fin de partie --- CARBON</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
     <header>
-        <img src="img/homepage/logo-blanc.png" alt="logo-carbon">
-        <a href="#" class="btn-articles">ARTICLES</a>
+        <a href="../public/homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
+        <div style="display: flex; align-items: center;">
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="btn-articles">ARTICLES</a>
+        </div>
     </header>
 
 </body>
