--- a/public/regles.html
+++ b/public/regles.html
@@ -22,6 +22,9 @@
         </div>
     </header>
 
+    <span class="titre-bg">CARBON</span>
+    <span class="bg-pois"></span>
+
     <section class="section-regles">
         <h1 class="h1-regles">Regles</h1>
         <div class="div-regles">
@@ -31,6 +34,7 @@
                 <button class="btn-rules btn-r3">Comment gagner ?</button>
                 <button class="btn-rules btn-r4">Les événements</button>
                 <button class="btn-rules btn-r5">Finir la partie</button>
+                <button class="btn-rules btn-acc">Accueil</button>
             </div>
             <div>
                 <select id="boutons-regles-mobile">
@@ -94,11 +98,10 @@
             </div>
         </div>
 
-        <a href="../public/homepage.html" class="bouton-retour">Retour à l'accueil</a>
     </section>
 
     <footer>
-        <p class="copyright">Copyright © 2022 IIM Digital School - Axe Coding & Digital Innovation</p>
+        <!-- <p class="copyright">Copyright © 2022 IIM Digital School - Axe Coding & Digital Innovation</p> -->
     </footer>
 
 
