fix page regles

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -7,30 +7,26 @@
     <title>Accueil --- CARBON</title>
 
     <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-
-        <img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon">
-        <div>
-
+        <a href="../public/homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
+        <div style="display: flex; align-items: center;">
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             <a href="#" class="btn-articles">ARTICLES</a>
-
         </div>
-
     </header>
 
-    <section>
+    <section class="section-hp">
 
         <div class="rules">
             <div class="container">
-                <h1>COMMENT JOUER</h1>
+                <h1 class="h1-homepage">COMMENT JOUER</h1>
                 <div class="rules-text">
                     <p>1. Premiere étape</p>
                     <div>
