--- a/public/homepage.html
+++ b/public/homepage.html
@@ -22,6 +22,9 @@
         </div>
     </header>
 
+    <span class="titre-bg">CARBON</span>
+    <span class="bg-pois"></span>
+
     <section class="section-hp">
 
         <div class="rules">
@@ -49,6 +52,7 @@
         </div>
 
         <div class="setup">
+            <h2>Créer la partie</h2>
             <div class="container_1">
                 <div class="title">
                     
