--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -22,7 +22,7 @@
     </header>
 
     <section class="sc-section">
-        <h1 class="sc-h1">Veuillez selectionner les cartes restantes dans votre deck</h1>
+        <h1 class="sc-h1">Cartes restantes des joueurs</h1>
 
         <div class="selection hide">
             <div class="select-zone">
