--- a/public/classement.html
+++ b/public/classement.html
@@ -11,9 +11,19 @@
 <body>
     
     <header>
-        <img src="img/homepage/logo-blanc.png" alt="logo-carbon">
-        <a href="#" class="btn-articles">ARTICLES</a>
+
+        <img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon">
+        <div>
+
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="btn-articles">ARTICLES</a>
+
+        </div>
+
     </header>
 
+    <div class="podium"></div>
+    <script src="./scripts/classement.js"></script>
 </body>
 </html>
