:lipstick: update page select-cards

--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -21,24 +21,31 @@
         </div>
     </header>
 
+    <span class="titre-bg">CARBON</span>
+    <span class="bg-pois"></span>
+
     <section class="sc-section">
         <h1 class="sc-h1">Cartes restantes des joueurs</h1>
 
-        <div class="selection hide">
-            <div class="select-zone">
-                <p>Veuillez selectionner votre carte avec son chiffre</p>
-                <input class='searchBar' type="text">
-                <button class="SC">Ok</button>
+        <div>
+            <div class="selection hide">
+                <div class="select-zone">
+                    <p>Veuillez selectionner votre carte avec son chiffre</p>
+                    <input class='searchBar' type="text">
+                    <button class="SC">Ok</button>
+                </div>
+            </div>
+
+            <div id="cards">
+                
             </div>
         </div>
 
-        <div id="cards">
-            
-        </div>
-
-        <a href="./classement.html" class="bouton-retour">Voir les résultats</a>
+        <a href="./classement.html" class="btn-results">Voir les résultats</a>
 
     </section>
+
+    <footer></footer>
 
 </body>
 </html>
