start local storage

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -53,13 +53,39 @@
 
         <div class="setup">
             <div class="grid un">
-                <h1>CREER LA PARTIE</h1>
+                <h3>CREE LA PARTIE</h2>
             </div>
             <div class="grid deux">
-
+                <div class="edit-player">
+                    <img src="" alt="">
+                    <h3>Creer ton personnage</h3>
+                    <input type="text">
+                    <button>></button>
+                </div>
+                <div class="player-list">
+                    <img src="" alt="">
+                    <p></p>
+                </div>
             </div>
             <div class="grid trois">
-
+                <h3>nombre de tours</h3>
+                <div class="stages">
+                    <button>10</button>
+                    <button>15</button>
+                    <button>25</button>
+                    <button>30</button>
+                    <button>35</button>
+                    <button><input type="text"></button>
+                </div>
+                <h3>Frequences des evenements</h3>
+                <p>par rapports au nombre de tours</p>
+                <div class="event">
+                    <button>25%</button>
+                    <button>50%</button>
+                    <button>75%</button>
+                    <button>100%</button>
+                </div>
+                <button>lancer la partie</button>
             </div>
         </div>
         
