--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="select-cards-body">
 
     <header>
         <a href="./homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
@@ -24,26 +24,31 @@
     <span class="titre-bg">CARBON</span>
     <span class="bg-pois"></span>
 
-    <section class="sc-section">
-        <h1 class="sc-h1">Cartes restantes des joueurs</h1>
+    <main class="select-cards-main">
 
-        <div>
-            <div class="selection hide">
+        <section class="sc-section">
+            <h1 class="sc-h1">Cartes restantes des joueurs</h1>
+
+            <div class="content-all">
+
                 <div class="select-zone">
-                    <p>Veuillez selectionner votre carte avec son chiffre</p>
-                    <input class='searchBar' type="text">
-                    <button class="SC">Ok</button>
+                    <div class="add-card">
+                        <input class='searchBar' placeholder="ID CARTE" type="text">
+                        <button class="SC disabled" disabled><span>></span></button>
+                    </div>
+                    <div class="add-card">
+                        <div class="bouton-retour"><span>Voir les resultats</span></div>
+                        <div class="align-both"></div>
+                    </div>
                 </div>
+
+                <div id="cards"></div>
             </div>
 
-            <div id="cards">
-                
-            </div>
-        </div>
 
-        <div class="bouton-retour">Voir les résultats</div>
-
-    </section>
+        </section>
+    </main>
+    
 
     <footer></footer>
 
