--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -12,7 +12,7 @@
 </head>
 <body class="select-cards-body">
 
-    <header>
+    <header class="header-select">
         <a href="./homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
         <div style="display: flex; align-items: center;">
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
