commit before pull

--- a/public/classement.html
+++ b/public/classement.html
@@ -20,7 +20,11 @@
         </div>
     </header>
 
+    <span class="titre-bg">CARBON</span>
+    <span class="bg-pois"></span>
+
     <div class="podium"></div>
+    
     <script src="./scripts/classement.js"></script>
 </body>
 </html>
