--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -27,11 +27,10 @@
     <section class="sc-section">
         <h1 class="sc-h1">Cartes restantes des joueurs</h1>
 
-        <div>
             <div class="selection hide">
                 <div class="select-zone">
-                    <p>Veuillez selectionner votre carte avec son chiffre</p>
-                    <input class='searchBar' type="text">
+                    <p>Veuillez sélectionner votre carte avec son chiffre :</p>
+                    <input class='searchBar' type="text" placeholder="ID carte">
                     <button class="SC">Ok</button>
                 </div>
             </div>
@@ -39,9 +38,8 @@
             <div id="cards">
                 
             </div>
-        </div>
 
-        <div class="bouton-retour">Voir les résultats</div>
+        <div class="bouton-retour btn-acc">Voir les résultats</div>
 
     </section>
 
