--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -15,5 +15,14 @@
         <a href="#" class="btn-articles">ARTICLES</a>
     </header>
 
+    <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
+    <div class="event">
+        <p class="eventName">Pas d'evenement</p>
+        <p class="eventDesc">Vous pouvez continuer la partie</p>
+    </div>
+
+    <div class="next">Continuer</div>
+
+    <script src="scripts/game.js"></script>
 </body>
 </html>
