--- a/public/classement.html
+++ b/public/classement.html
@@ -47,9 +47,9 @@
             <h2>Classement</h2>
         </div>
         <div class="autres-joueurs">
-            <p>Joueur 4e</p>
+            <!-- <p>Joueur 4e</p>
             <p>Joueur 5e</p>
-            <p>Joueur 6e</p>
+            <p>Joueur 6e</p> -->
         </div>
         <div class="boutons-page-classement">
             <div>
