commit before pull

--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu --- CARBON</title>
+    <script src="https://kit.fontawesome.com/42f94b7d2b.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,16 +20,27 @@
         </div>
     </header>
 
-    <!-- <span class="titre-bg">CARBON</span>
-    <span class="bg-pois"></span> -->
+    <span class="titre-bg">CARBON</span>
+    <span class="bg-pois"></span>
 
-    <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
-    <div class="event">
-        <p class="eventName">Pas d'evenement</p>
-        <p class="eventDesc">Vous pouvez continuer la partie</p>
+    <div class="div-game">
+        <div class="div-tour">
+            <div>
+                <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
+            </div>
+        </div>
+        <div class="titre-event">
+            <p>Evenement</p>
+        </div>
+        <div class="visuel-cartes">
+            <div><img src="./img/homepage/cartes.png" alt="visuel-cartes"></div>
+            <div class="next">Continuer</div>
+        </div>
+        <div class="event">
+            <h2 class="eventName">Pas d'evenement</h2>
+            <p class="eventDesc">Vous pouvez continuer la partie</p>
+        </div>
     </div>
-
-    <div class="next">Continuer</div>
 
     <script src="scripts/game.js"></script>
 </body>
