--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -33,12 +33,6 @@
 
             <div class="content-all">
 
-                <!-- <div class="selection hide">
-                    <div class="select-zone">
-                        <p>Veuillez sélectionner votre carte avec son chiffre :</p>
-                        <input class='searchBar' type="text" placeholder="ID carte">
-                        <button class="SC">Ok</button> -->
-
                 <div class="select-zone">
                     <div class="add-card">
                         <input class='searchBar' placeholder="ID CARTE" type="text">
@@ -50,7 +44,10 @@
                     </div>
                 </div>
 
-                <div id="cards"></div>
+                <div id="cards">
+                    <img class="chevron chevron-next" src="img/Vector.png" alt="chevron suivant">
+                    <img class="chevron chevron-previous" src="img/Vector.png" alt="chevron précédent">
+                </div>
             </div>
 
         </section>
