fix background pois

--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -21,7 +21,7 @@
     </header>
 
     <span class="titre-bg">CARBON</span>
-    <span class="bg-pois"></span>
+    <!-- <span class="bg-pois"></span> -->
 
     <div class="div-game">
         <div class="div-tour">
