--- a/public/classement.html
+++ b/public/classement.html
@@ -27,18 +27,20 @@
 
         <div class="player-n n1">
             <div>
-                <span class="player-name">Nom du joueur</span>
-                <span>Score : </span>
+                <span class="player-name player-name-0">Nom du joueur</span>
+                <span class="score-0">Score : </span>
             </div>
         </div>
         <div class="player-n n2">
             <div>
-                <span class="player-name">Nom du joueur</span>
+                <span class="player-name player-name-1">Nom du joueur</span>
+                <span class="score-1">Score : </span>
             </div>
         </div>
         <div class="player-n n3">
             <div>
-                <span class="player-name">Nom du joueur</span>
+                <span class="player-name player-name-2">Nom du joueur</span>
+                <span class="score-2">Score : </span>
             </div>
         </div>
 
