--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -23,13 +23,32 @@
     <span class="titre-bg">CARBON</span>
     <!-- <span class="bg-pois"></span> -->
 
+    <div class="div-game div-game-tour">
+        <div class="div-tour">
+            <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
+        </div>
+        <div class="titre-event">
+            <div>
+                <p>Evenement</p>
+            </div>
+        </div>
+        <div class="visuel-cartes">
+            <div><img src="./img/homepage/cartes.png" alt="visuel-cartes"></div>
+            <div class="next">Continuer</div>
+        </div>
+        <div class="event">
+            <h2 class="eventName">Pas d'evenement</h2>
+            <p class="eventDesc">Vous pouvez continuer la partie</p>
+        </div>
+    </div>
+
     <div class="div-game">
         <div class="div-tour">
             <div>
                 <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
             </div>
         </div>
-        <div class="titre-event">
+        <div class="titre-event title-cat-event">
             <p>Evenement</p>
         </div>
         <div class="visuel-cartes">
