jeu en cours ajout du js

--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -28,7 +28,7 @@
             <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
         </div>
         <div class="titre-event">
-            <div>
+            <div class="btn-event">
                 <p>Evenement</p>
             </div>
         </div>
@@ -37,14 +37,14 @@
             <div class="next">Continuer</div>
         </div>
         <div class="event">
-            <h2 class="eventName">Pas d'evenement</h2>
-            <p class="eventDesc">Vous pouvez continuer la partie</p>
+            <p class="tourP">Chaque joueur procede au tirage d’une carte et en remet une dans le depot</p>
+            <p class="tourP">Vous pouvez ensuite debattre entre joueurs pour echanger vos cartes si vous le souhaitez.</p>
         </div>
     </div>
 
-    <div class="div-game">
+    <div class="div-game div-game-event hide">
         <div class="div-tour">
-            <div>
+            <div class="btn-tour">
                 <p class="tour">Tour x <span class="tour-print-span">/x</span></p>
             </div>
         </div>
