--- a/public/homepage.html
+++ b/public/homepage.html
@@ -51,13 +51,13 @@
         </div>
 
         <div class="setup">
-            <div class="grid un">
+            <div class="grid one">
                 <h3>CREE LA PARTIE</h2>
             </div>
-            <div class="grid deux">
+            <div class="grid two">
                 <div class="player-display">
                     <div class="edit-player">
-                        <img id="" src="img/homepage/Avatar.png" alt="">
+                    <img id="" src="img/homepage/Avatar.png" alt="">
                             <div class="player-inputs">
                                 <h3>Creer ton personnage</h3>
                                 <input id="name" type="text" name="name" placeholder="pseudo">
@@ -70,15 +70,15 @@
                     </div>
                 </div>   
             </div>
-            <div class="grid trois">
+            <div class="grid three">
                 <h3>nombre de tours</h3>
                 <div class="laps">
-                    <input class="lap" type="button" name="10" value="10">
-                    <input class="lap" type="button" name="15" value="15">
-                    <input class="lap" type="button" name="25" value="25">
-                    <input class="lap" type="button" name="30" value="30">
-                    <input class="lap" type="button" name="35" value="35" >
-                    <input class="lap" type="text" id="client-value">
+                    <input class="lap-btn" type="button" name="10" value="10">
+                    <input class="lap-btn" type="button" name="15" value="15">
+                    <input class="lap-btn" type="button" name="25" value="25">
+                    <input class="lap-btn" type="button" name="30" value="30">
+                    <input class="lap-btn" type="button" name="35" value="35" >
+                    <input class="lap-btn" type="text" id="client-value">
                 </div>
                 <h3>Frequences des evenements</h3>
                 <p>par rapports au nombre de tours</p>
@@ -88,7 +88,7 @@
                     <button class="frequency" name="75%" value="0.75">75%</button>
                     <button class="frequency" name="100%" value="1">100%</button>
                 </div>
-                <input type="submit" value="Lancer la partie" />
+                <input id="submit-setup" type="submit" value="Lancer la partie" />
             </div>
         </div>
         
