commit before pull

--- a/public/jeu-en-cours.html
+++ b/public/jeu-en-cours.html
@@ -37,8 +37,8 @@
             <div class="next">Continuer</div>
         </div>
         <div class="event">
-            <p class="tourP">Chaque joueur procede au tirage d’une carte et en remet une dans le depot</p>
-            <p class="tourP">Vous pouvez ensuite debattre entre joueurs pour echanger vos cartes si vous le souhaitez.</p>
+            <p class="tourP">Chaque joueur procède au tirage d’une carte et en remet une dans le depôt.</p>
+            <p class="tourP">Vous pouvez ensuite débattre entre joueurs pour échanger vos cartes si vous le souhaitez.</p>
         </div>
     </div>
 
