:lipstick: index style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             <a href="#" class="btn-articles">ARTICLES</a>
-        </div>
+        </div>S
     </header>
 
     <span class="titre-bg">CARBON</span>
