--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <div class="grid two">
                 <div class="player-display">
                     <div class="edit-player">
-                    <img id="" src="img/homepage/Avatar.png" alt="">
+                    <img id="avatar" src="img/homepage/Avatar.png" alt="">
                             <div class="player-inputs">
                                 <h3>Creer ton personnage</h3>
                                 <input id="name" type="text" name="name" placeholder="pseudo">
-                                <input id="submit-player" type="submit" value=">" onclick="test()">        
+                                <input id="submit-player" type="submit" value=">">        
                             </div>
                     </div>
                     <div id="player-list">
@@ -88,7 +88,7 @@
                     <button class="frequency" name="75%" value="0.75">75%</button>
                     <button class="frequency" name="100%" value="1">100%</button>
                 </div>
-                <input id="submit-setup" type="submit" value="Lancer la partie" />
+                <button id="submit-setup">Lancer la partie</button>
             </div>
         </div>
         
