--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             <a href="#" class="btn-articles">ARTICLES</a>
-        </div>S
+        </div>
     </header>
 
     <span class="titre-bg">CARBON</span>
