--- a/public/select-cards.html
+++ b/public/select-cards.html
@@ -39,6 +39,7 @@
                         <button class="SC disabled" disabled><span>></span></button>
                     </div>
                     <div class="add-card">
+                        <div class="cache-clic"></div>
                         <div class="bouton-retour"><span>Voir les resultats</span></div>
                         <div class="align-both"></div>
                     </div>
