--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <a href="../public/homepage.html"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
+        <a href="../"><img src="img/homepage/logo-carbon.png" alt="logo-carbon" class="logo-carbon"></a>
         <div style="display: flex; align-items: center;">
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
